--- a/GeoTracker-School_Project-/app/src/main/res/values/strings.xml
+++ b/GeoTracker-School_Project-/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="duration">Duration: %1$s</string>
     <string name="difficulty">Difficulty: %1$s</string>
     <string name="date">Date: %1$s</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
