--- a/GeoTracker-School_Project-/app/src/main/res/values/strings.xml
+++ b/GeoTracker-School_Project-/app/src/main/res/values/strings.xml
@@ -4,11 +4,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="departure">Departure: %1$s</string>
-    <string name="via">Via: %1$s</string>
     <string name="destination">Destination: %1$s</string>
     <string name="distance">Distance: %1$s</string>
     <string name="duration">Duration: %1$s</string>
-    <string name="difficulty">Difficulty: %1$s</string>
+    <string name="note">Note: %1$s</string>
     <string name="date">Date: %1$s</string>
     <string name="title_activity_maps">Map</string>
 </resources>
